Closed
Bug 344172
Opened 17 years ago
Closed 17 years ago
Spellchecker doesn't display suggestion list for misspelled words and doesn't underline them if Russian, Ukrainian or Bulgarian Spell dictionary is installed
Categories
(Core :: Spelling checker, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.8.1beta2
People
(Reporter: unghost, Assigned: roc)
References
Details
(Keywords: fixed1.8.1, regression, verified1.8.1.3)
Attachments
(5 files)
10.55 KB,
image/png
|
Details | |
5.52 KB,
image/png
|
Details | |
9.66 KB,
image/png
|
Details | |
7.94 KB,
image/png
|
Details | |
1.15 KB,
patch
|
mscott
:
review+
mscott
:
superreview+
dbaron
:
approval1.8.1+
|
Details | Diff | Splinter Review |
1. Install latest Firefox Branch Build 2. Install Russian Spell Checker from http://downloads.mozdev.org/dictionaries/spell-ru.xpi (you need to unpack it and put "ru.aff" and "ru.dic" files in "C:\Program Files\Mozilla Firefox\dictionaries" ) 3. Select Russian dictionary from context menu. 4. Write misspelled word in Russian in some web form. Actual results: Firefox doesn't display suggestion list for misspelled word and doesn't underline it with red line. Expected results: Firefox should display suggestion list for misspelled word and underline it with red line. Additional information: I've made some tests and found regression window. This bug doesn't exist in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a3) Gecko/20060705 BonEcho/2.0a3 ID:2006070504 This bug exist in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a3) Gecko/20060706 BonEcho/2.0a3 ID:2006070603 Looking at regression window it's regression from Bug 343532 or Bug 339066 I'll attach some screenshots.
Reporter | ||
Comment 1•17 years ago
|
||
Spell check in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a3) Gecko/20060705 BonEcho/2.0a3 ID:2006070504
Reporter | ||
Comment 2•17 years ago
|
||
Spell check in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1a3) Gecko/20060706 BonEcho/2.0a3 ID:2006070603
Reporter | ||
Comment 3•17 years ago
|
||
I've made few more tests, looks like Ukrainian and Bulgarian spellchecker are broken too (these are languages with cyrillic alphabet). Setting severity to major, adding "regression" keyword and asking for blocking 1.8.1. Will attach 2 more screenshots.
Reporter | ||
Comment 4•17 years ago
|
||
Reporter | ||
Comment 5•17 years ago
|
||
Reporter | ||
Comment 6•17 years ago
|
||
Boris, you've helped a lot with Bug 307052. Symptoms of this bug is similar, and I greatly appreciate if you can take a look at it.
Reporter | ||
Updated•17 years ago
|
Summary: Spellchecker doesn't display suggestion list for misspelled words and doesn't underline them if Russian Spell dictionary is installed → Spellchecker doesn't display suggestion list for misspelled words and doesn't underline them if Russian, Ukrainian or Bulgarian Spell dictionary is installed
Updated•17 years ago
|
Flags: blocking1.8.1? → blocking1.8.1+
Target Milestone: --- → mozilla1.8.1beta2
Comment 7•17 years ago
|
||
The bugs listed in comment 0 were both fixed by commits Roc made, so he might have some idea where to go with this (I see he's already CCed on the bug).
Assignee | ||
Comment 8•17 years ago
|
||
It's probably a regression from my changes. Please don't bother Boris with it.
Assignee | ||
Comment 9•17 years ago
|
||
Fairly obvious bug in retrospect. Comparing just the bottom 8 bits to see if it's a digit isn't a good idea... we need a better Unicode-aware test here though.
Assignee: mscott → roc
Status: NEW → ASSIGNED
Attachment #229985 -
Flags: superreview?
Attachment #229985 -
Flags: review?
Assignee | ||
Updated•17 years ago
|
Attachment #229985 -
Flags: superreview?(mscott)
Attachment #229985 -
Flags: superreview?
Attachment #229985 -
Flags: review?(mscott)
Attachment #229985 -
Flags: review?
Comment 10•17 years ago
|
||
Comment on attachment 229985 [details] [diff] [review] fix thanks roc!
Attachment #229985 -
Flags: superreview?(mscott)
Attachment #229985 -
Flags: superreview+
Attachment #229985 -
Flags: review?(mscott)
Attachment #229985 -
Flags: review+
Reporter | ||
Comment 11•17 years ago
|
||
Is this patch ready to be checked in to trunk? It has needed r/sr.
Updated•17 years ago
|
Whiteboard: [needs-checkin]
Updated•17 years ago
|
Whiteboard: [needs-checkin] → [checkin needed]
Comment 12•17 years ago
|
||
Checking in mozInlineSpellWordUtil.cpp; /cvsroot/mozilla/extensions/spellcheck/src/mozInlineSpellWordUtil.cpp,v <-- mo zInlineSpellWordUtil.cpp new revision: 1.6; previous revision: 1.5 done Checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Reporter | ||
Comment 13•17 years ago
|
||
Verified fixed with "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060724 Minefield/3.0a1" build.
Status: RESOLVED → VERIFIED
Comment 14•17 years ago
|
||
Ready to ask for branch approval?
Assignee | ||
Comment 15•17 years ago
|
||
Comment on attachment 229985 [details] [diff] [review] fix yes
Attachment #229985 -
Flags: approval1.8.1?
Comment 16•17 years ago
|
||
Comment on attachment 229985 [details] [diff] [review] fix a=dbaron on behalf of drivers. Please check in to MOZILLA_1_8_BRANCH and mark fixed1.8.1 once you have done so.
Attachment #229985 -
Flags: approval1.8.1? → approval1.8.1+
Assignee | ||
Comment 17•17 years ago
|
||
I won't be able to check this in for a few days...
Whiteboard: [checkin needed]
Comment 18•17 years ago
|
||
Checking in mozInlineSpellWordUtil.cpp; /cvsroot/mozilla/extensions/spellcheck/src/mozInlineSpellWordUtil.cpp,v <-- mo zInlineSpellWordUtil.cpp new revision: 1.4.2.3; previous revision: 1.4.2.2 done Checked into 1.8.1 branch.
Keywords: fixed1.8.1
Whiteboard: [checkin needed]
Comment 19•17 years ago
|
||
verified fixed 1.8.1.3 using Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.3) Gecko/20070326 Thunderbird/2.0.0.0 Mnenhy/0.7.5.0 ID:2007032620 and the STR from comment #0 - spellcheck is working now for the 3 languages (Russian, Ukraine, Bulgarian)
Keywords: verified1.8.1.3
You need to log in
before you can comment on or make changes to this bug.
Description
•