Bug 344172 - Spellchecker doesn't display suggestion list for misspelled words and doesn't underline them if Russian, Ukrainian or Bulgarian Spell dictionary is installed, patch by roc, r+sr=mscott